# telegram-excerpt-prd-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOY_CLOUD_RUN.md  LOCAL_DEV.md
src/telegram_excerpt/: __init__.py  __main__.py  admin.py  config.py  exceptions.py  llm.py  logging_conf.py  manager.py  models.py  processor.py  responder.py  storage.py  web.py
tests/: conftest.py  test_admin.py  test_classify_scenarios.py  test_config.py  test_llm.py  test_manager.py  test_models.py  test_processor.py  test_responder.py  test_storage.py  test_web.py
